# name: TestAttachGroups.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 1,
          'legacy_id': None,
          'name': 'musicians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 2,
          'legacy_id': None,
          'name': 'hydrogeologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 3,
          'legacy_id': None,
          'name': 'architects',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'kelsey56',
      'id': 'bf1b993c',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 4,
          'legacy_id': None,
          'name': 'neurosurgeons',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 5,
          'legacy_id': None,
          'name': 'optometrists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 6,
          'legacy_id': None,
          'name': 'haematologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'darrellmorris',
      'id': 'fb085f7f',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
  ]
---
# name: TestAttachGroups.test_no_groups
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachGroups.test_single_document
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      <class 'dict'> {
        'id': 2,
        'legacy_id': None,
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      <class 'dict'> {
        'id': 3,
        'legacy_id': None,
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    ],
    'handle': 'kelsey56',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachPrimaryGroup.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        1,
        2,
      ],
      'handle': 'qtaylor',
      'id': 'bf1b993c',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': <class 'dict'> {
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        2,
      ],
      'handle': 'fcarpenter',
      'id': 'fb085f7f',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': <class 'dict'> {
        'id': 2,
        'legacy_id': None,
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
  ]
---
# name: TestAttachPrimaryGroup.test_no_primary_group
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachPrimaryGroup.test_single_document
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    ],
    'handle': 'laura56',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': 1,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
